Adiciona Flyway, Tabelas, Dtos e Testes Unitários